# Hospital_Agent

./: README.md  pyproject.toml
data/appendicitis/: admissions.parquet  diagnosis_ed.parquet  diagnosis_icd.parquet  ed_stays.parquet  history_pe_admedication_diagnosis.parquet  lab_events.parquet  medication.parquet  medrecon.parquet  metadata.json  microbiology.parquet  patients.parquet  procedures_icd.parquet  pyxis.parquet  radiology.parquet  triage.parquet  vitalsign.parquet
data/formatted_outputs/run_1/pneumonia/: pneumonia_28519937_conversation_1.json
src/: conv.py  mes_collect.py  prompts.py  qdrant_collection.py  run_simulations.sh  simulate.py
src/MimicEnums/: BloodEnum.py  BloodEnumPE.py  LabEventsEnums.py  LabEventsEnumsLong.py  MicrobiologyEnum.py  PeriodEnum.py  RadiologyModalityEnum.py  RadiologyRegionEnum.py  RouteEnum.py  UrineEnum.py  _60MicroBiologyEnum.py  __init__.py
src/configs/: agent_config.py
src/dataset/: __init__.py  mimic_dataset.py
src/tools/: __init__.py  tool_execs.py  tool_handler.py  tool_mimic.py  tool_observation.py  tool_request.py
